오류 및 디자인 수정
1. 이동경로에 사용할 색상을 가져오는 getRandomColor() 함수 제작(고대비 색상만 추출)
2. 이동경로의 선 굵기 수정
3. help 디자인 및 폰트 수정
4. 근처 장소추천 디자인 및 폰트 수정
5. 시작, 출발 지점 마커 디자인 및 폰트 수정
6. input 내부의 X버튼 안되던 오류 수정

--- a/testhtml.html
+++ b/testhtml.html
@@ -3,31 +3,31 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>그라데이션 효과</title>
+        <title>가로 타원형 테스트</title>
         <style>
-            .gradient-box {
-                width: 200px;
-                height: 200px;
-                background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0.95) 100%);
-            }
-            .gradient-box:hover {
-                width: 200px;
-                height: 200px;
-                background-image: linear-gradient(to top, #000, transparent);
-                animation: gradientAnimation 2s ease-in-out infinite alternate;
+            .m_end,
+            .m_start {
+                width: 140px; /* 가로 크기 */
+                height: 50px; /* 세로 크기 */
+                border-radius: 25px; /* border-radius를 사용하여 가로 타원형 생성 */
+                font-size: x-large;
+                color: white;
+                text-align: center;
+                line-height: 50px;
+                font-weight: 700;
+                margin: 0 auto;
             }
 
-            @keyframes gradientAnimation {
-                0% {
-                    background-position: 0 100%;
-                }
-                100% {
-                    background-position: 0 0;
-                }
+            .m_end {
+                background-color: rgb(117, 126, 255); /* 배경 색상 */
+            }
+            .m_start {
+                background-color: rgb(255, 104, 142); /* 배경 색상 */
             }
         </style>
     </head>
     <body>
-        <div class="gradient-box"></div>
+        <div class="m_start">출발지점</div>
+        <div class="m_end">도착지점</div>
     </body>
 </html>
